@@ -9,6 +9,7 @@ Date: ???
     - Stone metal mixing furnaces are available at the start of the game
     - Bob's assembling machines mod setting Fluid burning furnaces defaults to false
     - Renamed Brass and Bronze processing techs. Tidied up prerequisites
+    - Raw gem recipes unlocked by Geode crystallization 1
   Bugfixes:
     - Fixed crash in tutorial when SCT was not enabled
     - Cellulose Pulp was not usable as intermediate when hand crafting
